--- a/prepros-6.config
+++ b/prepros-6.config
@@ -40,12 +40,14 @@
         "assets/css/1-tools/_fonts.scss",
         "assets/css/1-tools/_normalize.scss",
         "assets/css/1-tools/_vars.sass",
+        "assets/css/1-tools/_animations.scss",
         "assets/css/2-base/_vars.scss",
         "assets/css/2-base/_base.sass",
         "assets/css/2-base/_placeholders.scss",
         "assets/css/4-section/_header.scss",
         "assets/css/4-section/_footer.scss",
-        "assets/css/4-section/_about.scss"
+        "assets/css/4-section/_about.scss",
+        "assets/css/4-section/_work.scss"
       ]
     },
     {
