Completed work section
Added images and completed work section

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -41,6 +41,7 @@
         "assets/css/1-tools/_normalize.scss",
         "assets/css/1-tools/_vars.sass",
         "assets/css/1-tools/_animations.scss",
+        "assets/css/1-tools/_spinner.scss",
         "assets/css/2-base/_vars.scss",
         "assets/css/2-base/_base.sass",
         "assets/css/2-base/_placeholders.scss",
