Changed baseurl and url in config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,10 @@
 # in the templates via {{ site.myvariable }}.
 
 
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "https://salonimude.github.io/SamplePortfolioSite/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  SaloniMude
 
 # Build settings
 markdown: kramdown
@@ -29,5 +29,3 @@ exclude:
   - Gemfile
   - Gemfile.lock
   
-sass:
-sass_dir: assets/css
