--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 
 
-baseurl: "/" # the subpath of your site, e.g. /blog
+baseurl: "/SamplePortfolioSite" # the subpath of your site, e.g. /blog
 url: "https://salonimude.github.io/SamplePortfolioSite/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  SaloniMude
